Merge IndexAccessControl for nested actions
Elasticsearch security uses a ThreadContext "IndicesAccessControl"
object to track detailed access decisions about indices that are
included within a request. For efficiency reasons, we only build
this access control object for indices that are (or are likely to be)
used within that action.

If transport action calls another action that may trigger a new set of
indices to be referenced, and an IndexAccessControl object will be
required for each of these.

Because transient values on a ThreadContext objects cannot be
overwritten, this commit introduces a mechanism by which new
IndexAccessControl objects can be included in an existing
IndicesAccessControl object on the thread context.